@@ -5,7 +5,7 @@
 #include "Resolver.hxx"
 #include "AddressInfo.hxx"
 #include "HostParser.hxx"
-#include "util/RuntimeError.hxx"
+#include "lib/fmt/RuntimeError.hxx"
 #include "util/CharUtil.hxx"
 #include "util/StringAPI.hxx"
 
@@ -26,10 +26,10 @@ Resolve(const char *node, const char *service,
 	struct addrinfo *ai;
 	int error = getaddrinfo(node, service, hints, &ai);
 	if (error != 0)
-		throw FormatRuntimeError("Failed to resolve '%s':'%s': %s",
-					 node == nullptr ? "" : node,
-					 service == nullptr ? "" : service,
-					 gai_strerror(error));
+		throw FmtRuntimeError("Failed to resolve {:?}:{:?}: {}",
+				      node == nullptr ? "" : node,
+				      service == nullptr ? "" : service,
+				      gai_strerror(error));
 
 	return AddressInfoList(ai);
 }
@@ -60,7 +60,7 @@ FindAndResolveInterfaceName(char *host, size_t size)
 
 	const unsigned i = if_nametoindex(interface);
 	if (i == 0)
-		throw FormatRuntimeError("No such interface: %s", interface);
+		throw FmtRuntimeError("No such interface: {}", interface);
 
 	sprintf(interface, "%u", i);
 }
