@@ -1,1 +1,4 @@
+/packagecache/
+
+/fmt-*/
 /libmpdclient/
