@@ -1,5 +1,6 @@
 ncmpc 0.50 - not yet released
 * build: require Meson 0.60
+* require libfmt 9
 * lyrics/musixmatch: add new lyrics extension
 * lyrics/google: fix partial loading of lyrics
 
